fixed collapsed navbar ordering issue

--- a/app/assets/stylesheets/homes.css.scss
+++ b/app/assets/stylesheets/homes.css.scss
@@ -32,7 +32,7 @@
 .navbar-toggle .icon-bar {
 	background: #88b7b3;
 }
-.navbar-collapse.in {
+.navbar-collapse {
 	background-color: #fff;
 }
 .topSpace {
@@ -154,15 +154,6 @@
 	}
 	.icon:hover {
 		color: #88b7b3;
-	}
-}
- 
-@media (min-width: 768px) {
-	.header .navbar-brand {
-		padding-left: 0;
-	}
-	.navbar-nav {
-		float: right;
 	}
 }
 @media (max-width: 480px) {
